[gd_scene load_steps=9 format=3 uid="uid://ckxxk2n0alobo"]

[ext_resource type="Script" uid="uid://di03qrvh57f3h" path="res://Scripts/UI/ColorPickerButtonGroup.gd" id="1_nnptb"]
[ext_resource type="Texture2D" uid="uid://c2hcx5ijcprtv" path="res://Assets/Sprites/Others/PreviousButton.png" id="2_uv4pu"]
[ext_resource type="Texture2D" uid="uid://dwvsuouocv0ni" path="res://Assets/Sprites/Others/NextButton.png" id="3_c3c7w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4a05s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ydse"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w7ymr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ugmyl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ualm4"]

[node name="ColorPickerButtonGroup" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nnptb")
left_button_icon = ExtResource("2_uv4pu")
right_button_icon = ExtResource("3_c3c7w")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -10.0
offset_right = 42.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviousColor" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_4a05s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6ydse")
icon = ExtResource("2_uv4pu")
flat = true

[node name="Separator1" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxEmpty_w7ymr")

[node name="ColorPreview" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Separator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
theme_override_styles/separator = SubResource("StyleBoxEmpty_w7ymr")

[node name="NextColor" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ugmyl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ualm4")
icon = ExtResource("3_c3c7w")
flat = true
